# docker

./: Dockerfile  main.py  pyproject.toml  Как запустить
